[package]
name = "LittleOS"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"] }
cortex-a = { version = "7.2.0" } 