[package]
name = "LittleOS"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"] }
cortex-a = { version = "7.2.0" } 
bitvec = { version = "1.0.0", default-features = false }
bitfield = "0.13.2"
num_enum = { version = "0.5.7", default-features = false }
bitflags = "1.3.2"
